--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,1 +1,9 @@
-<p> this user module </p>
+<mat-drawer-container autosize="true" >
+    <mat-drawer mode="side"  opened>
+        <app-sidebar  class="sidebar" #sidebar [expand]=expand></app-sidebar>
+    </mat-drawer>
+    <mat-drawer-content style="min-height: calc(100vh - 200px); overflow-y: auto; overflow-x: hidden;" >
+        <app-header  (toggle)="toggle()"></app-header>
+        <router-outlet></router-outlet>
+    </mat-drawer-content>
+</mat-drawer-container>
